--- a/views/index.html
+++ b/views/index.html
@@ -1,24 +1,7 @@
 <!DOCTYPE html>
-<html>
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>We R VR</title>
-    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="//cdn.auth0.com/js/lock-9.0.min.js"></script>
-    <script type="text/javascript" src="static/js/auth0-variables.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
-
-    <script src="http://fb.me/react-0.14.7.js"></script>
-    <script src="https://fb.me/react-dom-0.14.7.js"></script>
-    <script type="text/babel" src="static/js/app.jsx"></script>
-
-
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    <title>Expense tracker</title>
 </head>
 <body>
-<div class="container" id="app">
-
-</div>
+<h1>expense TRACKER</h1>
 </body>
-</html>
