Working TLS and auth

--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
 
     <!-- Core React libraries which we will be using -->
-    <script src="http://fb.me/react-0.14.7.js"></script>
+    <script src="https://fb.me/react-0.14.7.js"></script>
     <script src="https://fb.me/react-dom-0.14.7.js"></script>
 
     <!-- Our React app code will be placed in the app.jsx file -->
