--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>We R VR</title>
+    <title>Expense Tracker</title>
     <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
     <!-- We will use the Babel transpiler so that we can convert our jsx code to js on the fly -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
